# gold.xyz

./: .env  .env.development  .env.production  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tjrx35p09ng.json
public/js/: dd_rum.js
rust/: Cargo.toml
rust/zgsol-borsh-schema/: Cargo.toml
rust/zgsol-borsh-schema/src/: lib.rs  utils.rs
rust/zgsol-borsh-schema/src/layout/: borsh_type.rs  field.rs  mod.rs
rust/zgsol-borsh-schema/src/test/: borsh_btree.rs  borsh_enums.rs  borsh_structs.rs  generate_output.rs  mod.rs
rust/zgsol-borsh-schema/test-data/: test_enums.json  test_structs.json
rust/zgsol-borsh-schema/test-output/: package-lock.json  package.json  schema.ts  test.ts  tsconfig.json
rust/zgsol-borsh-schema/test-output/extensions/: enum.ts  struct.ts
rust/zgsol-borsh-schema/zgsol-borsh-schema-derive/: Cargo.toml
rust/zgsol-borsh-schema/zgsol-borsh-schema-derive/src/: lib.rs
rust/zgsol-fund-client/: Cargo.toml
rust/zgsol-fund-client/examples/: auction_bot.rs  read_state.rs  wasm_test.rs
rust/zgsol-fund-client/src/: client_error.rs  client_utils.rs  gold_client.rs  lib.rs
rust/zgsol-fund-contract/: Cargo.toml
rust/zgsol-fund-contract/src/: entrypoint.rs  error.rs  lib.rs  state.rs
rust/zgsol-fund-contract/src/instruction/: mod.rs
rust/zgsol-fund-contract/src/instruction/factory/: claim_funds.rs  close_auction_cycle.rs  delete_auction.rs  freeze_auction.rs  initialize_auction.rs  initialize_contract.rs  mod.rs  place_bid.rs
rust/zgsol-fund-contract/src/pda/: factory.rs  mod.rs
rust/zgsol-fund-contract/src/processor/: bid.rs  claim_funds.rs  close_auction_cycle.rs  delete_auction.rs  freeze.rs  initialize_auction.rs  initialize_contract.rs  mod.rs
rust/zgsol-fund-contract/tests/: error.rs  process_bid.rs  process_claim_funds.rs  process_close_auction_cycle.rs  process_delete_auction.rs  process_freeze.rs  process_initialize_contract.rs  process_tokens.rs  test_factory.rs
rust/zgsol-fund-contract/tests/fixtures/: metaplex_schema.rs
rust/zgsol-testbench/: Cargo.toml
rust/zgsol-testbench/src/: lib.rs
rust/zgsol-utils/: Cargo.toml
src/: middleware.ts  types.ts
src/contract-logic/: consts.ts  getAuction.ts  getAuctions.ts  importGlue.ts  index.ts  metadata_schema.ts  package.json  placeBid.ts  schema.ts  solanaLimiter.ts  startAuction.ts  test.ts  ts-run.sh
src/contract-logic-new/: index.ts  package.json  schema.ts  test.ts  tsconfig.json
src/hooks/: usePersonalSign.ts  usePinata.ts  usePinataCredentials.ts  usePinataJWT.ts  useUploadImage.ts  useWindowSize.ts
src/pages/: [treasury].tsx  _app.tsx  _document.tsx  (+3 more)
wasm-factory/: instructions.d.ts  instructions.js  instructions_bg.js  instructions_bg.wasm  instructions_bg.wasm.d.ts  package.json
(+204 files in other folders)
