[package]
name = "zgsol-borsh-schema"
version = "0.1.0"
edition = "2018"

[features] 
full = ["anyhow", "heck", "proc-macro2", "quote", "syn"]

[dependencies]
anyhow = { version = "1.0", optional = true }
heck = { version = "0.3.3", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "1.0", features = ["full", "extra-traits"], optional = true }
zgsol-borsh-schema-derive = { path = "./zgsol-borsh-schema-derive" }

[dev-dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = { git = "https://github.com/zgendao/solana.git" }
