[package]
name = "zgsol-fund-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.0"
js-sys = "0.3.55"
metaplex-token-metadata = { git = "https://github.com/zgendao/metaplex", branch = "experiments", features = ["no-entrypoint"] }
serde_json = "1.0"
wasm-bindgen = "0.2.78"
zgsol-fund-contract = { path = "../zgsol-fund-contract", features = ["client"] }
[dev-dependencies]
anyhow = "1.0"
solana-client = { git = "https://github.com/zgendao/solana" }
solana-sdk = { git = "https://github.com/zgendao/solana" }
structopt = "0.3"
zgsol-utils = { path = "../zgsol-utils" }
