[package]
name = "zgsol-fund-contract"
version = "0.1.0"
edition = "2018"

[lib]
name = "zgsol_fund_contract"
crate-type = ["cdylib", "lib"]

[features]
test-bpf = ["client"]
client = []

[dependencies]
borsh = "0.9.0"
borsh-derive = "0.9.0"
metaplex-token-metadata = { git = "https://github.com/zgendao/metaplex", branch = "experiments", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = { git = "https://github.com/zgendao/solana.git" }
spl-token = { git = "https://github.com/zgendao/solana-program-library.git", features = ["no-entrypoint"] }
thiserror = "1.0"
zgsol-borsh-schema = { path = "../zgsol-borsh-schema" }
zgsol-utils = { path = "../zgsol-utils", features = ["derive"] }

[dev-dependencies]
solana-sdk = { git = "https://github.com/zgendao/solana.git" }
zgsol-testbench = { path = "../zgsol-testbench" }
