[package]
name = "zgsol-testbench"
version = "0.1.0"
edition = "2018"

[dependencies]
borsh = "0.9.0"
serde = "1.0"
solana-program = { git = "https://github.com/zgendao/solana.git" }
solana-program-test = { git = "https://github.com/zgendao/solana.git" }
solana-sdk = { git = "https://github.com/zgendao/solana.git" }
spl-token = { git = "https://github.com/zgendao/solana-program-library.git", features = ["no-entrypoint"] }
